--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,16 +11,16 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li ng-mouseover="name = home;" ng-mouseleave="name = empty;"><a href="http://ejerzyk.github.io/"><img src="http://ejerzyk.github.io/img/computer-01.svg" class="icon"></a></li>
-              <li ng-mouseover="name = projects;" ng-mouseleave="name = empty;"><a href="http://ejerzyk.github.io/projects.html"><img src="http://ejerzyk.github.io/img/projects.svg" class="icon"></a></li>
-                <li ng-mouseover="name = resume;" ng-mouseleave="name = empty;"><a href="http://emmajerzyk.com/ComputerResume.pdf"><img src="http://ejerzyk.github.io/img/resume.svg" class="icon"></a></li>
-                <li ng-mouseover="name = herald;" ng-mouseleave="name = empty;"><a href="http://www.browndailyherald.com/author/emmajerzyk/"><img src="http://ejerzyk.github.io/img/herald.svg" class="icon"></a></li>
+              <li ng-mouseover="name = home;" ng-mouseleave="name = empty;"><a href="http://casten4congress.github.io"><img src="http://ejerzyk.github.io/img/computer-01.svg" class="icon"></a></li>
+              <!-- <li ng-mouseover="name = projects;" ng-mouseleave="name = empty;"><a href="http://ejerzyk.github.io/projects.html"><img src="http://ejerzyk.github.io/img/projects.svg" class="icon"></a></li> -->
+                <!-- <li ng-mouseover="name = resume;" ng-mouseleave="name = empty;"><a href="http://emmajerzyk.com/ComputerResume.pdf"><img src="http://ejerzyk.github.io/img/resume.svg" class="icon"></a></li> -->
+                <!-- <li ng-mouseover="name = herald;" ng-mouseleave="name = empty;"><a href="http://www.browndailyherald.com/author/emmajerzyk/"><img src="http://ejerzyk.github.io/img/herald.svg" class="icon"></a></li> -->
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <!-- <li ng-mouseover="name = blog;" ng-mouseleave="name = empty;"><a href="https://emmajerzyk.wordpress.com/"><img src="http://ejerzyk.github.io/img/wordpress.png" class="icon"></a></li> -->
-                <li ng-mouseover="name = twitter;" ng-mouseleave="name = empty;"><a href="https://twitter.com/ejerzyk"><img src="http://ejerzyk.github.io/img/twitter.png" class="icon"></a></li>
-                <li ng-mouseover="name = fb;" ng-mouseleave="name = empty;"><a href="https://www.facebook.com/ejerzyk"><img src="http://ejerzyk.github.io/img/facebook.png" class="icon"></a></li>
-                <li ng-mouseover="name = insta;" ng-mouseleave="name = empty;"><a href="https://instagram.com/ejerzyk/"><img src="http://ejerzyk.github.io/img/instagram.png" class="icon"></a></li>
+                <!-- <li ng-mouseover="name = twitter;" ng-mouseleave="name = empty;"><a href="https://twitter.com/ejerzyk"><img src="http://ejerzyk.github.io/img/twitter.png" class="icon"></a></li> -->
+                <!-- <li ng-mouseover="name = fb;" ng-mouseleave="name = empty;"><a href="https://www.facebook.com/ejerzyk"><img src="http://ejerzyk.github.io/img/facebook.png" class="icon"></a></li> -->
+                <!-- <li ng-mouseover="name = insta;" ng-mouseleave="name = empty;"><a href="https://instagram.com/ejerzyk/"><img src="http://ejerzyk.github.io/img/instagram.png" class="icon"></a></li> -->
             </ul>
         </div><!-- /.navbar-collapse -->
       </nav>
