--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" onclick="change()">
               <span class="sr-only">Toggle navigation</span>
-              <img src="http://ejerzyk.github.io/img/down-arrows.png" style="width: 20px;" id="arrow">
+              <img src="https://casten4congress.github.io/img/down-arrows.png" style="width: 20px;" id="arrow">
             </button>
         </div>
         <div class="navbar-center navbar-brand" ng-bind="name"></div>
@@ -11,7 +11,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li ng-mouseover="name = home;" ng-mouseleave="name = empty;"><a href="http://casten4congress.github.io"><img src="http://ejerzyk.github.io/img/computer-01.svg" class="icon"></a></li>
+              <li ng-mouseover="name = home;" ng-mouseleave="name = empty;"><a href="https://casten4congress.github.io"><img src="https://ejerzyk.github.io/img/computer-01.svg" class="icon"></a></li>
               <!-- <li ng-mouseover="name = projects;" ng-mouseleave="name = empty;"><a href="http://ejerzyk.github.io/projects.html"><img src="http://ejerzyk.github.io/img/projects.svg" class="icon"></a></li> -->
                 <!-- <li ng-mouseover="name = resume;" ng-mouseleave="name = empty;"><a href="http://emmajerzyk.com/ComputerResume.pdf"><img src="http://ejerzyk.github.io/img/resume.svg" class="icon"></a></li> -->
                 <!-- <li ng-mouseover="name = herald;" ng-mouseleave="name = empty;"><a href="http://www.browndailyherald.com/author/emmajerzyk/"><img src="http://ejerzyk.github.io/img/herald.svg" class="icon"></a></li> -->
@@ -38,11 +38,11 @@
         $scope.fb = "fb";
         $scope.insta = "insta";
         $scope.home = "home";
-        $scope.iarrow = "http://ejerzyk.github.io/img/down-arrows.png"
+        $scope.iarrow = "https://casten4congress.github.io/img/down-arrows.png"
     });
     function change() {
       var element = document.getElementById("arrow");
-      element.src = element.bln ? "http://ejerzyk.github.io/img/down-arrows.png" : "http://ejerzyk.github.io/img/arrows-26.svg";
+      element.src = element.bln ? "https://casten4congress.github.io/img/down-arrows.png" : "https://casten4congress.github.io/img/arrows-26.svg";
       element.bln = !element.bln;  /* assigns opposite boolean value always */
     }
     </script>
