--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
   <br><br><br><br><br>
   <div id="footer">
     <div class="container">
-      This website is powered by: <a href="https://github.com/">Github</a>, <a href="http://getbootstrap.com/">Bootstrap</a>, <a href="https://angularjs.org/">AngularJS</a>, and <a href="http://jekyllrb.com/">Jekyll</a>.&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="mailto:emmajerzyk@gmail.com">Contact me!</a> 
+      This website is powered by: <a href="https://github.com/">Github</a>, <a href="http://getbootstrap.com/">Bootstrap</a>, <a href="https://angularjs.org/">AngularJS</a>, and <a href="http://jekyllrb.com/">Jekyll</a>. 
     </div>
   </div>
   <script>
