--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.css">
-    <link rel="shortcut icon" href="https://ejerzyk.github.io/favicon.ico"/>
+    <!-- <link rel="shortcut icon" href="https://ejerzyk.github.io/favicon.ico"/> -->
     <script src="https://code.jquery.com/jquery-latest.js"></script>
     <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.js"></script>
     <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
